--- a/application.yml
+++ b/application.yml
@@ -11,7 +11,19 @@ spring:
     properties:
       hibernate:
         dialect: org.hibernate.dialect.MySQL8Dialect
-    
+    spring:
+ 
+  cloud:
+      gateway:
+        routes:
+           - id: DOCTOR-SERVICE
+             uri: lb://DOCTOR-SERVICE
+             predicates:
+                  - Path=/doctor/**
+           - id: PATIENT-SERVICE
+             uri: lb://PATIENT-SERVICE
+             predicates:
+                  - Path=/patient/**
 eureka:
   client:
     service-url:
