--- a/application.yml
+++ b/application.yml
@@ -2,7 +2,7 @@ spring:
   datasource:
     driver-class-name: com.mysql.cj.jdbc.Driver
     name: hospital
-    password: kCS@#123
+    password: root@123
     url: jdbc:mysql://localhost:3306/hospital
     username: root
   jpa:
